Convert all controllers to use Dtos and fix all CRUD integration tests